force-app/main/default/objects/Fields_Translation__mdt/Fields_Translation__mdt.object-meta.xml
<CustomObject>
    <label>Fields Translation</label>
    <pluralLabel>Fields Translations</pluralLabel>
</CustomObject>