force-app/main/default/objects/Fields_Translation__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>