force-app/main/default/objects/Fields_Translation__mdt/fields/ar_AE__c.field-meta.xml
<CustomField>
    <fullName>ar_AE__c</fullName>
    <label>ar-AE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>