force-app/main/default/objects/Fields_Translation__mdt/fields/ar_AE_Long__c.field-meta.xml
<CustomField>
    <fullName>ar_AE_Long__c</fullName>
    <label>ar-AE-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>