force-app/main/default/objects/Fields_Translation__mdt/fields/cns_CS__c.field-meta.xml
<CustomField>
    <fullName>cns_CS__c</fullName>
    <label>cns-CS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>