force-app/main/default/objects/Fields_Translation__mdt/fields/cns_CS_Long__c.field-meta.xml
<CustomField>
    <fullName>cns_CS_Long__c</fullName>
    <label>cns-CS-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>