force-app/main/default/objects/Fields_Translation__mdt/fields/cnt_HK__c.field-meta.xml
<CustomField>
    <fullName>cnt_HK__c</fullName>
    <label>cnt-HK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>