force-app/main/default/objects/Fields_Translation__mdt/fields/cnt_HK_Long__c.field-meta.xml
<CustomField>
    <fullName>cnt_HK_Long__c</fullName>
    <label>cnt-HK-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>