force-app/main/default/objects/Fields_Translation__mdt/fields/cnt_TW__c.field-meta.xml
<CustomField>
    <fullName>cnt_TW__c</fullName>
    <label>cnt-TW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>