force-app/main/default/objects/Fields_Translation__mdt/fields/de_DE__c.field-meta.xml
<CustomField>
    <fullName>de_DE__c</fullName>
    <label>de-DE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>