force-app/main/default/objects/Fields_Translation__mdt/fields/de_DE_Long__c.field-meta.xml
<CustomField>
    <fullName>de_DE_Long__c</fullName>
    <label>de-DE-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>