force-app/main/default/objects/Fields_Translation__mdt/fields/en_AU__c.field-meta.xml
<CustomField>
    <fullName>en_AU__c</fullName>
    <label>en-AU</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>