force-app/main/default/objects/Fields_Translation__mdt/fields/en_AU_Long__c.field-meta.xml
<CustomField>
    <fullName>en_AU_Long__c</fullName>
    <label>en-AU-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>