force-app/main/default/objects/Fields_Translation__mdt/fields/en_CA__c.field-meta.xml
<CustomField>
    <fullName>en_CA__c</fullName>
    <label>en-CA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>