force-app/main/default/objects/Fields_Translation__mdt/fields/en_CA_Long__c.field-meta.xml
<CustomField>
    <fullName>en_CA_Long__c</fullName>
    <label>en-CA-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>