force-app/main/default/objects/Fields_Translation__mdt/fields/en_GB__c.field-meta.xml
<CustomField>
    <fullName>en_GB__c</fullName>
    <label>en-GB</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>