force-app/main/default/objects/Fields_Translation__mdt/fields/en_HK__c.field-meta.xml
<CustomField>
    <fullName>en_HK__c</fullName>
    <label>en-HK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>