force-app/main/default/objects/Fields_Translation__mdt/fields/en_NL__c.field-meta.xml
<CustomField>
    <fullName>en_NL__c</fullName>
    <label>en-NL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>