force-app/main/default/objects/Fields_Translation__mdt/fields/en_SG__c.field-meta.xml
<CustomField>
    <fullName>en_SG__c</fullName>
    <label>en-SG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>