force-app/main/default/objects/Fields_Translation__mdt/fields/en_US__c.field-meta.xml
<CustomField>
    <fullName>en_US__c</fullName>
    <label>en-US</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>