force-app/main/default/objects/Fields_Translation__mdt/fields/es_ES__c.field-meta.xml
<CustomField>
    <fullName>es_ES__c</fullName>
    <label>es-ES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>