force-app/main/default/objects/Fields_Translation__mdt/fields/es_ES_Long__c.field-meta.xml
<CustomField>
    <fullName>es_ES_Long__c</fullName>
    <label>es-ES-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>