force-app/main/default/objects/Fields_Translation__mdt/fields/et_ET__c.field-meta.xml
<CustomField>
    <fullName>et_ET__c</fullName>
    <label>et-ET</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>