force-app/main/default/objects/Fields_Translation__mdt/fields/et_ET_Long__c.field-meta.xml
<CustomField>
    <fullName>et_ET_Long__c</fullName>
    <label>et-ET-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>