force-app/main/default/objects/Fields_Translation__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>Field name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>