force-app/main/default/objects/Fields_Translation__mdt/fields/fr_CA__c.field-meta.xml
<CustomField>
    <fullName>fr_CA__c</fullName>
    <label>fr-CA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>