force-app/main/default/objects/Fields_Translation__mdt/fields/fr_CA_Long__c.field-meta.xml
<CustomField>
    <fullName>fr_CA_Long__c</fullName>
    <label>fr-CA-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>