force-app/main/default/objects/Fields_Translation__mdt/fields/fr_FR__c.field-meta.xml
<CustomField>
    <fullName>fr_FR__c</fullName>
    <label>fr-FR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>