force-app/main/default/objects/Fields_Translation__mdt/fields/fr_FR_Long__c.field-meta.xml
<CustomField>
    <fullName>fr_FR_Long__c</fullName>
    <label>fr-FR-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>