force-app/main/default/objects/Fields_Translation__mdt/fields/it_IT__c.field-meta.xml
<CustomField>
    <fullName>it_IT__c</fullName>
    <label>it-IT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>