force-app/main/default/objects/Fields_Translation__mdt/fields/it_IT_Long__c.field-meta.xml
<CustomField>
    <fullName>it_IT_Long__c</fullName>
    <label>it-IT-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>