force-app/main/default/objects/Fields_Translation__mdt/fields/jp_JP__c.field-meta.xml
<CustomField>
    <fullName>jp_JP__c</fullName>
    <label>jp-JP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>