force-app/main/default/objects/Fields_Translation__mdt/fields/jp_JP_Long__c.field-meta.xml
<CustomField>
    <fullName>jp_JP_Long__c</fullName>
    <label>jp-JP-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>