force-app/main/default/objects/Fields_Translation__mdt/fields/ko_KR__c.field-meta.xml
<CustomField>
    <fullName>ko_KR__c</fullName>
    <label>ko-KR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>