force-app/main/default/objects/Fields_Translation__mdt/fields/ko_KR_Long__c.field-meta.xml
<CustomField>
    <fullName>ko_KR_Long__c</fullName>
    <label>ko-KR-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>