force-app/main/default/objects/Fields_Translation__mdt/fields/kr_KR__c.field-meta.xml
<CustomField>
    <fullName>kr_KR__c</fullName>
    <label>kr-KR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>