force-app/main/default/objects/Fields_Translation__mdt/fields/kr_KR_Long__c.field-meta.xml
<CustomField>
    <fullName>kr_KR_Long__c</fullName>
    <label>kr-KR-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>