force-app/main/default/objects/Fields_Translation__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>