force-app/main/default/objects/Fields_Translation__mdt/fields/pt_BR__c.field-meta.xml
<CustomField>
    <fullName>pt_BR__c</fullName>
    <label>pt-BR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>