force-app/main/default/objects/Fields_Translation__mdt/fields/pt_BR_Long__c.field-meta.xml
<CustomField>
    <fullName>pt_BR_Long__c</fullName>
    <label>pt-BR-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>