force-app/main/default/objects/Fields_Translation__mdt/fields/ru_RU__c.field-meta.xml
<CustomField>
    <fullName>ru_RU__c</fullName>
    <label>ru-RU</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>