force-app/main/default/objects/Fields_Translation__mdt/fields/ru_RU_Long__c.field-meta.xml
<CustomField>
    <fullName>ru_RU_Long__c</fullName>
    <label>ru-RU-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>