force-app/main/default/objects/Fields_Translation__mdt/fields/th_TH__c.field-meta.xml
<CustomField>
    <fullName>th_TH__c</fullName>
    <label>th-TH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>