force-app/main/default/objects/Fields_Translation__mdt/fields/th_TH_Long__c.field-meta.xml
<CustomField>
    <fullName>th_TH_Long__c</fullName>
    <label>th-TH-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>