force-app/main/default/objects/Fields_Translation__mdt/fields/zh_Hant_TW__c.field-meta.xml
<CustomField>
    <fullName>zh_Hant_TW__c</fullName>
    <label>zh-Hant_TW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>