force-app/main/default/objects/Fields_Translation__mdt/fields/zh_Hant_TW_Long__c.field-meta.xml
<CustomField>
    <fullName>zh_Hant_TW_Long__c</fullName>
    <label>zh-Hant_TW-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>