force-app/main/default/objects/Fields_Translation__mdt/fields/zhs_CN__c.field-meta.xml
<CustomField>
    <fullName>zhs_CN__c</fullName>
    <label>zhs-CN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>