force-app/main/default/objects/Fields_Translation__mdt/fields/zhs_CN_Long__c.field-meta.xml
<CustomField>
    <fullName>zhs_CN_Long__c</fullName>
    <label>zhs-CN-Long</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>